fix(styles): prevent error message overlap in auth forms
- Added margin-bottom to .error elements to prevent text overlap

--- a/scss/layout/_auth.scss
+++ b/scss/layout/_auth.scss
@@ -123,6 +123,7 @@
     .input-control .error {
         color: #ff3860;
         margin-top: u.rem(8);
+        margin-bottom: u.rem(8);
         font-size: u.rem(10);
         height: u.rem(20);
     }
